--- a/TruckV2X/index.html
+++ b/TruckV2X/index.html
@@ -20,21 +20,24 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
+    <!-- Hero Section 优化 -->
     <header class="hero">
         <div class="hero-content">
-            <h1>TruckV2X</h1>
-            <p class="tagline">The First Truck-Centered Cooperative Perception Dataset</p>
+            <!-- 放大论文标题，突出显示 -->
+            <h1 class="main-title">TruckV2X</h1>
+            <p class="subtitle">The First Truck-Centered Cooperative Perception Dataset</p>
             
-            <!-- Authors and Affiliations -->
+            <!-- 作者及机构信息（保持简洁，不抢标题焦点） -->
             <div class="authors">
                 <p>Tenghui Xie¹, Zhiying Song¹, Fuxi Wen¹, Jun Li¹, Guangzhao Liu², Zijian Zhao²</p>
                 <div class="affiliations">
                     <div class="affiliation">
-                        <span>¹School of Vehicle and Mobility, Tsinghua University</span>
+                        <img src="images/tsinghua_logo.png" alt="Tsinghua University" class="affiliation-logo">
+                        <span>¹Tsinghua University</span>
                     </div>
                     <div class="affiliation">
-                        <span>²FAW Jiefang Group Co., Ltd.</span>
+                        <img src="images/faw_logo.png" alt="FAW Jiefang" class="affiliation-logo">
+                        <span>²FAW Jiefang Group</span>
                     </div>
                 </div>
             </div>
