--- a/TruckV2X/index.html
+++ b/TruckV2X/index.html
@@ -96,7 +96,7 @@
                     <div class="subsection">
                         <h3>Vehicle & Sensor Configurations</h3>
                         <p>
-                            TruckV2X integrates a high-fidelity semi-trailer truck model (Table I) into CARLA via Unreal Engine, with physics-based kinematic constraints for realistic articulation. Each agent is equipped with multi-modal sensors:
+                            TruckV2X integrates a high-fidelity semi-trailer truck model into CARLA via Unreal Engine, with physics-based kinematic constraints for realistic articulation. Each agent is equipped with multi-modal sensors:
                         </p>
 
                         <ul>
