--- a/TruckV2X/index.html
+++ b/TruckV2X/index.html
@@ -71,7 +71,7 @@
 
                     <!-- Figure 2: 不限制宽度 -->
                     <div class="figure">
-                        <img src="images/fig2.png" alt="Dataset comparison" class="figure-img">
+                        <img src="images/fig2.png" alt="Dataset comparison" class="figure-restricted">
                         <p class="figure-caption">Fig. 2: Datasets for autonomous driving perception. TruckV2X is the first multi-agent collaborative dataset for heavy vehicles (V2V: Vehicle-to-Vehicle, V2I: Vehicle-to-Infrastructure).</p>
                     </div>
 
@@ -109,7 +109,7 @@
 
                         <!-- Figure 3: 不限制宽度 -->
                         <div class="figure">
-                            <img src="images/fig3.png" alt="Sensor configurations" class="figure-img">
+                            <img src="images/fig3.png" alt="Sensor configurations" class="figure-restricted">
                             <p class="figure-caption">Fig. 3: Sensor layouts for tractor, trailer, CAV, and RSU (LiDAR and camera ranges shown).</p>
                         </div>
                     </div>
@@ -174,7 +174,7 @@
 
                         <!-- Figure 8: 不限制宽度 -->
                         <div class="figure">
-                            <img src="images/fig8.png" alt="ORR distribution" class="figure-img">
+                            <img src="images/fig8.png" alt="ORR distribution" class="figure-restricted">
                             <p class="figure-caption">Fig. 8: ORR frequency distribution for different agent configurations (truck, CAV, RSU) with distance probability densities.</p>
                         </div>
                     </div>
