--- a/TruckV2X/index.html
+++ b/TruckV2X/index.html
@@ -49,7 +49,7 @@
 
     <!-- Main Content -->
     <main>
-        <!-- 1. Project Overview -->
+        <!-- 1. Dataset Overview -->
         <section id="overview" class="section">
             <div class="container">
                 <h2>Project Overview</h2>
@@ -60,6 +60,17 @@
                     <p>
                         Existing datasets primarily focus on light vehicles, lacking multi-agent configurations for heavy-duty scenarios. To address this gap, we present <strong>TruckV2X</strong>—the first large-scale truck-centered cooperative perception dataset with multi-modal sensing (LiDAR and cameras) and multi-agent cooperation (tractors, trailers, CAVs, RSUs). It supports the development of occlusion-resistant cooperative perception systems for autonomous trucking.
                     </p>
+                    
+                    <div class="key-points">
+                        <div class="point">
+                            <h3>Dataset Highlights</h3>
+                            <p>• 88,396 LiDAR frames & 1M camera images<br>• 1.18M 3D bounding box annotations<br>• 64 scenarios covering urban/highway scenes<br>• Multi-agent data: tractors, trailers, CAVs, RSUs</p>
+                        </div>
+                        <div class="point">
+                            <h3>Key Contributions</h3>
+                            <p>• First truck-specific multi-agent cooperative dataset<br>• Benchmarks for occlusion handling tasks<br>• Quantifies trucks as both occlusion sources and perception enhancers</p>
+                        </div>
+                    </div>
 
                     <!-- Figure 1: Half-column with text (left: image, right: text) -->
                     <div class="half-column-container">
@@ -84,17 +95,6 @@
                             <h3>Dataset Positioning</h3>
                             <p>TruckV2X fills a critical gap in existing autonomous driving datasets by focusing specifically on heavy-duty vehicles and their unique perception challenges.</p>
                             <p>Unlike previous datasets that primarily focus on passenger vehicles, TruckV2X incorporates multi-agent cooperation scenarios involving tractors, trailers, other connected vehicles, and road infrastructure, creating a comprehensive platform for developing cooperative perception algorithms.</p>
-                        </div>
-                    </div>
-
-                    <div class="key-points">
-                        <div class="point">
-                            <h3>Dataset Highlights</h3>
-                            <p>• 88,396 LiDAR frames & 1M camera images<br>• 1.18M 3D bounding box annotations<br>• 64 scenarios covering urban/highway scenes<br>• Multi-agent data: tractors, trailers, CAVs, RSUs</p>
-                        </div>
-                        <div class="point">
-                            <h3>Key Contributions</h3>
-                            <p>• First truck-specific multi-agent cooperative dataset<br>• Benchmarks for occlusion handling tasks<br>• Quantifies trucks as both occlusion sources and perception enhancers</p>
                         </div>
                     </div>
                 </div>
