--- a/TruckV2X/index.html
+++ b/TruckV2X/index.html
@@ -52,7 +52,7 @@
         <!-- 1. Dataset Overview -->
         <section id="overview" class="section">
             <div class="container">
-                <h2>Project Overview</h2>
+                <h2>Dataset Overview</h2>
                 <div class="content">
                     <p>
                         Autonomous trucking faces unique perception challenges due to large vehicle size and dynamic trailer movements, leading to extensive blind spots and occlusions. Tractor-trailer systems create persistent blind zones where structural components obstruct both self-perception and neighboring agents' sensing. Articulated motion exacerbates occlusions during maneuvers, while low-speed operation expands risk zones in mixed traffic.
@@ -64,11 +64,11 @@
                     <div class="key-points">
                         <div class="point">
                             <h3>Dataset Highlights</h3>
-                            <p>• 88,396 LiDAR frames & 1M camera images<br>• 1.18M 3D bounding box annotations<br>• 64 scenarios covering urban/highway scenes<br>• Multi-agent data: tractors, trailers, CAVs, RSUs</p>
+                            <p>• 88,396 LiDAR frames <br>• 1.18M 3D bounding box annotations<br>• 64 scenarios covering urban/highway scenes<br>• Multi-agent data: tractors, trailers, CAVs, RSUs</p>
                         </div>
                         <div class="point">
                             <h3>Key Contributions</h3>
-                            <p>• First truck-specific multi-agent cooperative dataset<br>• Benchmarks for occlusion handling tasks<br>• Quantifies trucks as both occlusion sources and perception enhancers</p>
+                            <p>• TruckV2X: first truck-centered multi-modal/multi-agent cooperative dataset, addressing truck-specific data scarcity<br>• Experimental demonstration: trucks as mobile perception platforms with dual role as occlusion sources and enhancers reducing environmental occlusions<br>• Truck-centered collaborative perception benchmark: encouraging research, advancing cooperative technologies for truck perception safety</p>
                         </div>
                     </div>
 
