--- a/TruckV2X/index.html
+++ b/TruckV2X/index.html
@@ -68,7 +68,7 @@
                         </div>
                         <div class="point">
                             <h3>Key Contributions</h3>
-                            <p>• TruckV2X: first truck-centered multi-modal/multi-agent cooperative dataset, addressing truck-specific data scarcity<br>• Experimental demonstration: trucks as mobile perception platforms with dual role as occlusion sources and enhancers reducing environmental occlusions<br>• Truck-centered collaborative perception benchmark: encouraging research, advancing cooperative technologies for truck perception safety</p>
+                            <p>• First truck-centered multi-agent cooperative dataset<br>• Benchmarks for truck collaborative perception<br>• Quantifies trucks as occlusion sources and perception enhancers</p>
                         </div>
                     </div>
 
