--- a/TruckV2X/index.html
+++ b/TruckV2X/index.html
@@ -76,12 +76,12 @@
                     <div class="half-column-container">
                         <div class="half-column-image">
                             <img src="images/fig1.png" alt="Truck-related occlusions" class="figure-img">
-                            <p class="figure-caption">Fig. 1: Illustration of truck-related occlusions. (a) Trailer obstructs tractor; (b) Truck obstructs others; (c) Occluded area at different positions within a 30m radius (tractor-trailer occludes 1.5× more area than passenger cars).</p>
+                            <p class="figure-caption">Fig. 1: Illustration of truck-related occlusions.</p>
                         </div>
                         <div class="half-column-text">
                             <h3>Truck-specific Perception Challenges</h3>
                             <p>Trucks present unique perception challenges due to their large size and articulated structure. The tractor-trailer configuration creates extensive blind zones that significantly impact both self-perception and the perception capabilities of surrounding vehicles.</p>
-                            <p>Our analysis shows that tractor-trailer combinations create 1.5× more occluded area compared to passenger cars within a 30m radius, making cooperative perception essential for safe autonomous trucking operations.</p>
+                            <p>Our analysis shows that tractor-trailer combinations create 1.5× more occluded area than passenger cars within 30m, worsening with trailer pivot (over 70% occlusion at 90° turns), making cooperative perception essential.</p>
                         </div>
                     </div>
 
