--- a/TruckV2X/index.html
+++ b/TruckV2X/index.html
@@ -89,11 +89,11 @@
                     <div class="half-column-container reverse">
                         <div class="half-column-image">
                             <img src="images/fig2.png" alt="Dataset comparison" class="figure-img">
-                            <p class="figure-caption">Fig. 2: Datasets for autonomous driving perception. TruckV2X is the first multi-agent collaborative dataset for heavy vehicles (V2V: Vehicle-to-Vehicle, V2I: Vehicle-to-Infrastructure).</p>
+                            <p class="figure-caption">Fig. 2: Datasets available for the perception of autonomous driving.</p>
                         </div>
                         <div class="half-column-text">
                             <h3>Dataset Positioning</h3>
-                            <p>TruckV2X fills a critical gap in existing autonomous driving datasets by focusing specifically on heavy-duty vehicles and their unique perception challenges.</p>
+                            <p>TruckV2X is the first multi-agent collaborative perception dataset specifically designed for heavy vehicles. TruckV2X fills a critical gap in existing autonomous driving datasets by focusing specifically on heavy-duty vehicles and their unique perception challenges.</p>
                             <p>Unlike previous datasets that primarily focus on passenger vehicles, TruckV2X incorporates multi-agent cooperation scenarios involving tractors, trailers, other connected vehicles, and road infrastructure, creating a comprehensive platform for developing cooperative perception algorithms.</p>
                         </div>
                     </div>
