--- a/TruckV2X/index.html
+++ b/TruckV2X/index.html
@@ -113,12 +113,6 @@
                             TruckV2X integrates a high-fidelity semi-trailer truck model into CARLA via Unreal Engine, with physics-based kinematic constraints for realistic articulation. Each agent is equipped with multi-modal sensors:
                         </p>
 
-                        <ul>
-                            <li><strong>Tractor/Trailer</strong>: 2×64-channel LiDARs (360° FOV, 120m range, 10Hz) and 5 cameras (800×600 resolution, 90°-120° FOV).</li>
-                            <li><strong>CAV</strong>: 1×64-channel LiDAR + 4 cameras (360° coverage).</li>
-                            <li><strong>RSU</strong>: 1×64-channel LiDAR + 1 camera (mounted at 4m height to minimize pedestrian blind spots).</li>
-                        </ul>
-
                         <!-- Figure 3: Half-column with text -->
                         <div class="half-column-container">
                             <div class="half-column-image">
@@ -129,6 +123,9 @@
                                 <h3>Multi-modal Sensing Architecture</h3>
                                 <p>The TruckV2X dataset features a comprehensive sensing architecture designed specifically for heavy vehicle scenarios. Each agent in the dataset is equipped with complementary sensors to capture rich environmental data.</p>
                                 <p>The tractor and trailer units each have dedicated sensor suites to address their unique perception needs, while CAVs and RSUs provide additional perspectives to enable cooperative perception research.</p>
+                                <p><strong>Tractor/Trailer</strong>: 2×64-channel LiDARs (360° FOV, 120m range, 10Hz) and 5 cameras (800×600 resolution, 90°-120° FOV).<p>
+                                <p><strong>CAV</strong>: 1×64-channel LiDAR + 4 cameras (360° coverage).<p>
+                                <p><strong>RSU</strong>: 1×64-channel LiDAR + 1 camera (mounted at 4m height to minimize pedestrian blind spots).<p>
                             </div>
                         </div>
                     </div>
