--- a/TruckV2X/index.html
+++ b/TruckV2X/index.html
@@ -117,7 +117,7 @@
                         <div class="half-column-container">
                             <div class="half-column-image">
                                 <img src="images/fig3.png" alt="Sensor configurations" class="figure-img">
-                                <p class="figure-caption">Fig. 3: Sensor layouts for tractor, trailer, CAV, and RSU (LiDAR and camera ranges shown).</p>
+                                <p class="figure-caption">Fig. 3: Illustration of sensor configurations for the agents.</p>
                             </div>
                             <div class="half-column-text">
                                 <h3>Multi-modal Sensing Architecture</h3>
@@ -137,12 +137,12 @@
 
                         <div class="figure">
                             <img src="images/fig4.png" alt="Representative scenarios" class="figure-img">
-                            <p class="figure-caption">Fig. 4: Representative scenarios (T-intersection, straight road, four-way intersection, roundabout) with occlusion annotations (dashed ellipses denote blind zones).</p>
+                            <p class="figure-caption">Fig. 4: Representative scenarios with occlusion annotations (dashed ellipses denote blind zones).</p>
                         </div>
 
                         <div class="figure">
                             <img src="images/fig5.png" alt="Data statistics" class="figure-img">
-                            <p class="figure-caption">Fig. 5: Dataset statistics. (a) Frames per scenario; (b) Agent distances; (c) Agent speeds; (d) Tractor-trailer articulation angles; (e) Object categories (65% light vehicles, 20% VRUs, 15% heavy vehicles); (f) Co-visible objects; (g) Object-agent distances; (h) Object speeds.</p>
+                            <p class="figure-caption">Fig. 5: (a) Frame counts per scenario. (b) Distance statistics between agents. (c) Speed statistics of agents. (d) Articulation angle counts between the tractor and trailer. (e) Object category counts. (f) Statistics of co-visible objects among agents. (g) Distance statistics between objects and agents. (h) Speed statistics of objects.</p>
                         </div>
 
                         <p>
