--- a/TruckV2X/index.html
+++ b/TruckV2X/index.html
@@ -52,7 +52,7 @@
         <!-- 1. Dataset Overview -->
         <section id="overview" class="section">
             <div class="container">
-                <h2>Dataset Overview</h2>
+                <h2>Overview</h2>
                 <div class="content">
                     <p>
                         Autonomous trucking faces unique perception challenges due to large vehicle size and dynamic trailer movements, leading to extensive blind spots and occlusions. Tractor-trailer systems create persistent blind zones where structural components obstruct both self-perception and neighboring agents' sensing. Articulated motion exacerbates occlusions during maneuvers, while low-speed operation expands risk zones in mixed traffic.
