--- a/TruckV2X/index.html
+++ b/TruckV2X/index.html
@@ -64,7 +64,7 @@
                     <div class="key-points">
                         <div class="point">
                             <h3>Dataset Highlights</h3>
-                            <p>• 88,396 LiDAR frames <br>• 1.18M 3D bounding box annotations<br>• 64 scenarios covering urban/highway scenes<br>• Multi-agent data: tractors, trailers, CAVs, RSUs</p>
+                            <p>• 88,396 LiDAR frames and 1.18M 3D bounding box annotations<br>• 64 scenarios covering urban/highway scenes<br>• Multi-agent data: tractors, trailers, CAVs, RSUs</p>
                         </div>
                         <div class="point">
                             <h3>Key Contributions</h3>
