--- a/TruckV2X/index.html
+++ b/TruckV2X/index.html
@@ -41,7 +41,7 @@
             </div>
             
             <div class="hero-buttons">
-                <a href="https://arxiv.org/abs/2507.09505v1" class="btn">Paper</a>
+                <a href="https://ieeexplore.ieee.org/abstract/document/11096563" class="btn">Paper</a>
                 <a href="https://huggingface.co/datasets/XieTenghu1/TruckV2X" class="btn">Dataset</a>
             </div>
         </div>
@@ -236,12 +236,16 @@
                 <div class="citation-card">
                     <p>If you use TruckV2X or find our work inspiring in your research, please cite our paper:</p>
                     <pre class="bibtex">
-@article{xie2025truckv2x,
-  title={TruckV2X: A Truck-Centered Perception Dataset},
+@ARTICLE{11096563,
   author={Xie, Tenghui and Song, Zhiying and Wen, Fuxi and Li, Jun and Liu, Guangzhao and Zhao, Zijian},
-  journal={arXiv preprint arXiv:2507.09505},
-  year={2025}
-}
+  journal={IEEE Robotics and Automation Letters}, 
+  title={TruckV2X: A Truck-Centered Perception Dataset}, 
+  year={2025},
+  volume={},
+  number={},
+  pages={1-8},
+  keywords={Agricultural machinery;Laser radar;Cameras;Robot sensing systems;Roads;Vehicle dynamics;Sensors;Safety;Vehicle-to-infrastructure;Training;Vehicle-to-everything;Cooperative Perception;Autonomous Trucking;Dataset},
+  doi={10.1109/LRA.2025.3592884}}
                     </pre>
                 </div>
             </div>
